Fix DCHECK when setting transform-box style to 'border-box'.

This is an invalid value for the property, but had been incorrectly left
in the CSS parser fast-path code as allowed.

Bug: 816534
Change-Id: Ic787508d21b3f385a37e5c4d50989c69d8dd48ac
Reviewed-on: https://chromium-review.googlesource.com/1024775
Commit-Queue: Stephen McGruer <smcgruer@chromium.org>
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553224}
Former-commit-id: 010c0cc318b4d718edcb7c7bb4d4af2b81ebac8b