third_party/blink/renderer/core/css/parser/css_parser_fast_paths.cc
@@ -854,8 +854,7 @@ bool CSSParserFastPaths::IsValidKeywordPropertyAndValue(
       return value_id == CSSValueDisc || value_id == CSSValueCircle ||
              value_id == CSSValueSquare || value_id == CSSValueNone;
     case CSSPropertyTransformBox:
-      return value_id == CSSValueBorderBox || value_id == CSSValueFillBox ||
-             value_id == CSSValueViewBox;
+      return value_id == CSSValueFillBox || value_id == CSSValueViewBox;
     case CSSPropertyTransformStyle:
       return value_id == CSSValueFlat || value_id == CSSValuePreserve3d;
     case CSSPropertyWebkitUserDrag:
